# MatMechMMM_programming

./: 2020.cpp
1 semester/2020.09.17/: lfewfre.cpp  task1.cpp  task2.c  task2.cpp  task3.cpp
1 semester/2020.09.24/: task4.cpp  task5.cpp  task6.cpp
1 semester/2020.10.09/: task8.cpp  task9.cpp
1 semester/2020.10.15/: task 10.cpp
1 semester/2020.10.16/: task 10.cpp
1 semester/2020.10.22/: 11.c  12.cpp
1 semester/2020.10.29/: 13.cpp
1 semester/2020.11.12/: 14.cpp  15.cpp
1 semester/2020.11.19/: 16.cpp  17.cpp
1 semester/2020.11.26/: 18.cpp  19.cpp  20.cpp
1 semester/2020.12.10/: 21.cpp
2 semester/2021.03.16/: Insertion_sort.cpp  a.out  bubble_sort.cpp  merge_sort.cpp  selection_sort.h
2 semester/practic/11_homework/: main.cpp
2 semester/practic/2021.02.16/: CMakeCache.txt  CMakeLists.txt  Insertion_sort.h  Makefile  bubble_sort.h  main  main.cpp  merge_sort.h  selection_sort.cpp
2 semester/practic/2021.02.24/: Insertion_sort.cpp  Insertion_sort.h  main.cpp  makefile  test2_out.txt
2 semester/practic/2021.03.16/: main.cpp  makefile
2 semester/practic/2021.04.06/: main.cpp
2 semester/practic/3_2021.03.03/: A.h  main.cpp
2 semester/practic/7_homework/: main.cpp
2 semester/project/: example.tex
3 semester/2021.09.23/: 1.cpp
3 semester/2021.09.30/: main.cpp
3 semester/3 work/: main  main.cpp  myProg
3 semester/5 work/: main  main.cpp
4semester/1work/: 1_versus2.ipynb  1_versus3.ipynb  README.dm
4semester/2_work/: 2_versus.ipynb  2versus_2.ipynb  README.dm
4semester/5_work/: ant colony.ipynb  simulated annealing.ipynb
(+30 files in other folders)
